Fixed scroll snapping near projects section. Wrapped project img with an anchor element.

--- a/src/app.scss
+++ b/src/app.scss
@@ -22,20 +22,9 @@ a {
 
 section {
     height: 100vh;
+    width: 100%;
     scroll-snap-align: center;
-}
-
-.course {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    .box {
-        width: 200px;
-        height: 200px;
-        background-color: white;
-    }
+    overflow: hidden;
 }
 
 @mixin mobile {
